Update `/geyser connectiontest` command usage (#299)
* Update connectiontest command usage, adapt /ping command to work the same way

* Use nullable Integer instead of re-parsing the ip:port stuff

* add min/max value & max length check to port
remove timestamp, changed title

* Address review

* Fix: max length

Co-authored-by: Olivia <chew@chew.pw>

---------

Co-authored-by: Olivia <chew@chew.pw>